yangi header qo'shdim

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     
+    <header>
+        <div class="container">
+            <h1>hi</h1>
+            <a href="#" class="logo">myname</a>
+        </div>
+    </header>
 </body>
 </html>
