--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <div class="container">
             <h1>hi</h1>
             <a href="#" class="logo">myname</a>
+            <nav>
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     
